kubernetes/4_singlelink.yaml
apiVersion: v1
kind: Service
metadata:
  name: singlelink-editor
  namespace: singlelink
spec:
  selector:
    app: singlelink-editor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: singlelink-server
  namespace: singlelink
spec:
  selector:
    app: singlelink-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5566
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlelink-editor
  labels:
    app: singlelink-editor
  namespace: singlelink
spec:
  selector:
    matchLabels:
      app: singlelink-editor
  replicas: 20
  template:
    metadata:
      labels:
        app: singlelink-editor
      namespace: singlelink
    spec:
      containers:
        - name: singlelink-editor
          image: singlelink-editor:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlelink-server
  labels:
    app: singlelink-server
  namespace: singlelink
spec:
  selector:
    matchLabels:
      app: singlelink-server
  replicas: 20
  template:
    metadata:
      labels:
        app: singlelink-server
      namespace: singlelink
    spec:
      containers:
        - name: singlelink-server
          image: singlelink-server:latest
          ports:
            - containerPort: 80
