kubernetes/5_singlelink.yaml
apiVersion: v1
kind: Service
metadata:
  name: singlelink-editor
  namespace: singlelink
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  selector:
    app: singlelink-editor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: singlelink-api
  namespace: singlelink
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  selector:
    app: singlelink-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: singlelink-renderer
  namespace: singlelink
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
spec:
  selector:
    app: singlelink-renderer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlelink-editor
  labels:
    app: singlelink-editor
  namespace: singlelink
spec:
  selector:
    matchLabels:
      app: singlelink-editor
  replicas: 2
  template:
    metadata:
      labels:
        app: singlelink-editor
      namespace: singlelink
    spec:
      containers:
        - name: singlelink-editor
          image: neutroncreative/singlelink-editor:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlelink-api
  labels:
    app: singlelink-api
  namespace: singlelink
spec:
  selector:
    matchLabels:
      app: singlelink-api
  replicas: 4
  template:
    metadata:
      labels:
        app: singlelink-api
      namespace: singlelink
    spec:
      containers:
        - name: singlelink-api
          image: neutroncreative/singlelink-api:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singlelink-renderer
  labels:
    app: singlelink-renderer
  namespace: singlelink
spec:
  selector:
    matchLabels:
      app: singlelink-renderer
  replicas: 4
  template:
    metadata:
      labels:
        app: singlelink-renderer
      namespace: singlelink
    spec:
      containers:
        - name: singlelink-renderer
          image: neutroncreative/singlelink-renderer:latest
          ports:
            - containerPort: 80
